--- a/src/main/resources/templates/common/header.html
+++ b/src/main/resources/templates/common/header.html
@@ -7,6 +7,7 @@
     <!-- Bootstrap core CSS -->
     <link th:href="@{/webjars/bootstrap/3.3.7/css/bootstrap.min.css}" rel="stylesheet" />
     <link th:href="@{/css/styles.css}" rel="stylesheet" />
+    <link th:href="@{/css/carousel.css}" rel="stylesheet" />
     <!-- Custom styles for this template -->
     <style>
         body {
@@ -24,5 +25,6 @@
   <div th:fragment="before-body-scripts">
       <script th:src="@{webjars/jquery/2.2.4/jquery.min.js}"></script>
       <script th:src="@{webjars/bootstrap/3.3.7/js/bootstrap.min.js}"></script>
+      <script th:src="@{/js/devopsbuddy.js}"></script>
   </div>
 </html>
