--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -11,6 +11,24 @@
 <div class="container">
 
     <div class="row">
+        <div class="col-md-6 col-md-offset-3 text-center">
+            <div th:if="${param.error}" class="alert alert-danger alter-dismissable" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="close">
+                    <span aria-hidden="true"></span>
+                </button>
+                <p th:text="#{login.error.message}" />
+            </div>
+            <div th:if="${param.logout}" class="alert alert-success alter-dismissable" role="alert">
+                <button type="button" class="close" data-dismiss="alert" aria-label="close">
+                    <span aria-hidden="true"></span>
+                </button>
+                <p th:text="#{login.logout.success}" />
+            </div>
+
+
+        </div>
+    </div>
+    <div class="row">
         <div class="col-md-6 col-offset-6">
             <div class="well">
                 <div class="text-center">
@@ -25,7 +43,7 @@
                         </div>
                         <div class="form-group">
                             <label for="password" th:text="#{login.form.password}"></label>
-                            <input type="text" id="password" name="password" class="form-control" />
+                            <input type="password" id="password" name="password" class="form-control" />
                         </div>
                         <div class="form-group">
                           <button type="submit" th:text="#{navbar.login}" class="btn btn-primary" />
