--- a/src/main/resources/templates/user/login.html
+++ b/src/main/resources/templates/user/login.html
@@ -49,6 +49,7 @@
                           <button type="submit" th:text="#{navbar.login}" class="btn btn-primary" />
                         </div>
                     </form>
+                    <a th:href="@{/forgotpassword}" th:text="#{login.forgot.password.text}" />
                 </div>
             </div>
         </div>
